# Cpp-version-HAL-for-MCU-

./: CMakeLists.txt  README.md
bsp/: CMakeLists.txt  GD32F303ZGT6_FLASH.ld  gd32f30x_flash.ld
bsp/Firmware/CMSIS/GD/GD32F30x/Include/: gd32f30x.h
bsp/Firmware/CMSIS/GD/GD32F30x/Source/: system_gd32f30x.c
bsp/board/: FreeRTOSConfig.h  board_config.h  freertos.c  main.c  syscalls.cpp
bsp/hcl_gd32f3/: adc.h  bitband.h  dma.h  exti.h  gpio.h  i2c.h  interrupts.cpp  micros.h  spi.h  timer.h  uart.h  uart.md
bsp/hcl_gd32f3/traits/: adc_traits.h  dma_traits.h  i2c_traits.h  spi_traits.h  timer_traits.h  type_list.h  uart_traits.h
hcl/: CMakeLists.txt  hcl_adc.h  hcl_common.h  hcl_dma.h  hcl_exti.h  hcl_gpio.h  hcl_i2c.h  hcl_micros.h  hcl_spi.h  hcl_timer.h  hcl_uart.h  ring_buffer.h
oscl/: CMakeLists.txt  oscl_common.h  oscl_timer.h
oscl/freertos/: oscl_base.cpp  oscl_memory.cpp  oscl_monitor.cpp  oscl_semaphore.cpp  oscl_task.cpp
svd/: GD32F30x_XD.svd
tests/: CMakeLists.txt  test_main.cpp  unity_config.h
tests/hcl/: README_SPI_TEST.md  mock_uart.hpp  test_adc.cpp  test_adc.h  test_dma.cpp  test_dma.h  test_i2c.cpp  test_i2c.h  test_ring_buffer.cpp  test_ring_buffer.h  test_spi.cpp  test_spi.h  test_timer.cpp  test_timer.h  test_uart.cpp  test_uart.h
tests/oscl/: mock_time.cpp  mock_time.hpp
